# coms-standalone-core

./: .gitignore  DEPLOY.md  PUSH_GUIDE.md  Procfile  README.md  pyproject.toml  requirements.txt
Integration_Resources/: System_Linkage_Map.md
System_Core/: ARCHITECTURE_AND_SECURITY.md  DELIVERY_GAP_ANALYSIS.md  FRONTEND_DESCRIPTION.md  SYSTEM_README.md  backup_manager.py  check_db.py  consultancy.db  create_admin_user.py  create_files_table.py  create_relational_db.py  create_test_users.py  db_engine.py  debug_auth.py  fix_password_hashes.py  generate_from_csv.py  generate_pages.py  main.py  migrate_data.py  migrate_users.py  schema.sql  seed_fake_data.py  server.py  setup_settings_auth.py  setup_uploads.py  system.db  temp_fix.py  test_login.py  update_tasks_schema.py  verify_schema.py
System_Core/backend/: milestone_billing.py  scheduled_tasks.py
System_Core/backend/api/: __init__.py  consultant_api.py
System_Core/backend/billing/: __init__.py  invoice_generator.py  profitability.py
System_Core/backend/events/: task_events.py  (+3 more)
System_Core/backups/: consultancy_backup_20260102_054819.db
docs/: README_OLD.md
docs/plans/: 00_START_SEPARATION_COMMAND.txt  01_Separation_Master_Plan.md  Docker_Activation_Guide.md  FORM_UPDATES_RECOMMENDATION.txt  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_2_ROADMAP.md  PROJECT_STATUS.md  S1_Security_And_Roles_Phase.md  S2A_Portal_Foundation_Phase.md  S2B_Portal_Navigation_Phase.md  S3_Operational_Modules_Phase.md  S4_Commercial_Modules_Phase.md  S5_Master_Data_Integration.md  Separation_Strategy_Analysis.md  WORKFLOW_ENGINE_PLAN.md
(+124 files in other folders)
