[project]
name = "coms"
authors = [
    { name = "COMS", email = "admin@coms.local"}
]
description = "Consultant Operation Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
